# sdk

./: .flake8  .gitignore  README.md  pyproject.toml
ckan2sdk/: README.md  attributes_testexport.xlsx  mapper_ckan_to_sdk.py  mapping.py  testexport_11datasets.json
ckan2sdk/_data/: grobstruktur.json
ckan2sdk/interface/: sdk.py
ckan2sdk/libs/: ckan_api.py  cleaner.py
ckan2sdk/libs/dataclasses/: sdk.py
sdk2ckan/: ckan_dataclass.py
sdk2ckan/export_sdk_demo/: 20240429_export.json
